<resources>
    <string name="app_name">出库系统</string>
    <string name="out_system">出库系统</string>

    <string name="login_username">登录名</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password">密&#160;&#160;码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="remember_password">记住密码</string>

    <string name="login">登录</string>
    <string name="technical_support">技术支持：成都旌旗数码科技有限公司</string>
    <string name="material_sweep">材料扫码</string>
    <string name="outbound">出库</string>
    <string name="search">查询</string>
    <string name="logout">退出登录</string>
    <string name="back">返回</string>
    <string name="submit">提交出库信息</string>
    <string name="tarr_name">材料名称</string>
    <string name="unit">单位</string>
    <string name="spec">规格</string>
    <string name="price">价格</string>
    <string name="tarr_attr">属性</string>
    <string name="num">数量</string>
    <string name="begin_date">开始时间:</string>
    <string name="end_date">截止时间:</string>
    <string name="choose">选择</string>

    <string name="org_name">门店:</string>
    <string name="doc_name">医生:</string>
    <string name="out_username">出库人:</string>
    <string name="out_time">出库时间:</string>

    <string name="batch">批次</string>
    <string name="out_count">数量</string>


    <string name="scan_message">请在设置中打开扫描头</string>
    <string name="dialog_ok">确定</string>
    <string name="action_settings">设置</string>
    <string name="single_scan">单扫</string>
    <string name="continuous_scan">连扫</string>
    <string name="key_scan">按键保持</string>
    <string name="confirm">确定</string>


    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>
