<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128px"
    android:background="@color/colorWhite"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128px"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:divider="@drawable/shape_linearlayout_mid_v"
        android:showDividers="middle"
       >

        <TextView
            android:id="@+id/textView_tarr_name"
            android:layout_width="196px"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16px"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/tarr_name"
            android:textColor="@color/colorMainText"
            android:textSize="34px"
            android:typeface="serif"
            />

        <TextView
            android:id="@+id/textView_unit"
            android:layout_width="126px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/unit"
            android:textColor="@color/colorMainText"
            android:textSize="34px"
            android:typeface="serif"/>

        <TextView
            android:id="@+id/textView_spec"
            android:layout_width="126px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/spec"
            android:textColor="@color/colorMainText"
            android:textSize="34px"
            android:typeface="serif"/>

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="126px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/price"
            android:textColor="@color/colorMainText"
            android:textSize="34px"
            android:typeface="serif"/>

        <EditText
            android:id="@+id/editText_num_show"
            android:layout_width="96px"
            android:layout_height="66px"
            android:layout_marginLeft="16px"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_edittext_background"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorMainText"
            android:textCursorDrawable="@drawable/shape_edittext_cursor"
            android:textSize="34px"
            android:typeface="serif"
            android:imeOptions="actionDone"
            />
    </LinearLayout>
</LinearLayout>