<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBegin"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout_choose_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64px"
        >
        <TextView
            android:id="@+id/textView_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="128px"
            android:text="@string/begin_date"
            android:textSize="40px"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="32px"

            />
        <TextView
            android:id="@+id/textView_begin_date_show"
            android:layout_width="wrap_content"
            android:layout_height="128px"
            android:layout_alignParentRight="true"
            android:textSize="40px"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="2017-7-13"
            android:layout_marginRight="32px"
            />

        <TextView
            android:id="@+id/textView_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/textView_begin_date"
            android:background="@color/colorLine"
            />
        <TextView
            android:id="@+id/textView_end_date"
            android:layout_below="@+id/textView_line"
            android:layout_width="wrap_content"
            android:layout_height="128px"
            android:text="@string/end_date"
            android:textSize="40px"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="32px"
            />
        <TextView
            android:id="@+id/textView_end_date_show"
            android:layout_below="@+id/textView_line"
            android:layout_width="wrap_content"
            android:layout_height="128px"
            android:layout_alignParentRight="true"
            android:textSize="40px"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="2017-7-13"
            android:layout_marginRight="32px"
            />

        <TextView
            android:id="@+id/textView_line_other"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/textView_end_date"
            android:background="@color/colorLine"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="196px"
        android:layout_height="88px"
        android:layout_below="@+id/relativeLayout_choose_time"
        android:layout_marginTop="64px"
        android:text="@string/confirm"
        android:textSize="40px"
        android:layout_marginLeft="96px"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_button_confirm"
        />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="196px"
        android:layout_height="88px"
        android:layout_below="@+id/relativeLayout_choose_time"
        android:layout_marginTop="64px"
        android:text="@string/soft_update_cancel"
        android:textSize="40px"
        android:layout_marginRight="96px"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_button_confirm"
        />

    <TextView
        android:id="@+id/textView_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_below="@+id/button_submit"
        android:layout_marginTop="64px"
        />
</RelativeLayout>