<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:id="@+id/relativeLayout_login"
    >
    <RelativeLayout
        android:id="@+id/relativeLayout_title"
        android:layout_width="match_parent"
        android:layout_height="540px"
        android:background="@color/colorLogin"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">
        />
        <ImageView
            android:layout_width="364px"
            android:layout_height="382px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70px"
            android:src="@mipmap/login_bg"
            />

        <ImageView
            android:layout_width="180px"
            android:layout_height="180px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="170px"
            android:src="@mipmap/advar"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_user_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36px"
        android:layout_below="@+id/relativeLayout_title"
        android:background="@color/colorLiWhite">

        <RelativeLayout
            android:id="@+id/relativeLayout_username"
            android:layout_width="match_parent"
            android:layout_height="128px">

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="126px"
                android:layout_height="128px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32px"
                android:gravity="center"
                android:text="@string/login_username"
                android:textColor="@color/colorBlack"
                android:textSize="40px"
                android:typeface="serif"
                />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32px"
                android:layout_marginRight="32px"
                android:layout_toRightOf="@+id/textView_username"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEditHint"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:textSize="38px"
                android:typeface="serif"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/line_username_password"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/relativeLayout_username"
            android:layout_marginLeft="32px"
            android:background="@color/colorLine" />

        <RelativeLayout
            android:id="@+id/relativeLayout_password"
            android:layout_width="match_parent"
            android:layout_height="128px"
            android:layout_below="@+id/line_username_password">

            <TextView
                android:id="@+id/textView_password"
                android:layout_width="126px"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32px"
                android:gravity="center"
                android:text="@string/login_password"
                android:typeface="serif"
                android:textColor="@color/colorBlack"
                android:textSize="40px" />

            <RelativeLayout
                android:id="@+id/relativeLayout_password_image"
                android:layout_width="64px"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32px">

                <ImageView
                    android:id="@+id/imageView_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="center"
                    android:src="@mipmap/clear_text"
                    android:tint="#7E7F86" />
            </RelativeLayout>


            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32px"
                android:layout_marginRight="32px"
                android:layout_toLeftOf="@+id/relativeLayout_password_image"
                android:layout_toRightOf="@+id/textView_password"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_password_hint"
                android:typeface="serif"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEditHint"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:textSize="38px" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/line_button_login"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/relativeLayout_user_information"
        android:background="@color/colorLine" />

    <CheckBox
        android:id="@+id/checkbox_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_button_login"
        android:layout_marginTop="32px"
        android:text="@string/remember_password"
        android:textSize="34px"
        android:textColor="@color/colorMainText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32px"
        android:buttonTint="@color/colorLogin"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_below="@+id/line_button_login"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="156px"
        android:background="@drawable/shape_button_login_change"
        android:text="@string/login"
        android:typeface="serif"
        android:textColor="@color/colorWhite"
        android:textSize="42px" />

    <TextView
        android:id="@+id/button_line"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="8px"
        ></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48px"
        android:text="@string/technical_support"
        android:textColor="@color/colorTextColor"
        android:textSize="28px"
        />

</RelativeLayout>
